--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,7 +46,7 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:29.0.2'
     implementation 'com.android.support:gridlayout-v7:29.0.2'
     implementation "com.android.support:customtabs:29.0.2"
-
+    implementation 'com.mikhaellopez:circularimageview:3.2.0'
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'com.github.bumptech.glide:glide:4.7.1'
 }
