--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,9 @@
         <activity android:name=".PaymentSuccessDialog"/>
         <activity android:name=".Singers_Profile_Activity"/>
         <activity android:name=".Ticket_Booking_Activity"/>
+        <activity android:name=".Button_Music_Activity"/>
+        <activity android:name=".Button_Art_Activity"/>
+        <activity android:name=".Buton_Magic_activity"/>
 
     </application>
 
